tests/fixtures/invalid/pow_list_str_str.py
# Cannot call pow() with List[int], Str, Str
x = pow([1, 2, 3], "hello", "hello")
